fixed references in consolidated staticfiles for frontend

--- a/frontend/templates/home/django-material-dashboard/profile.html
+++ b/frontend/templates/home/django-material-dashboard/profile.html
@@ -177,7 +177,7 @@
                     </li>
                     <li class="list-group-item border-0 d-flex align-items-center px-0 mb-2">
                       <div class="avatar me-3">
-                        <img src="{% static 'assets/img/django-material-dashboard/ivana-square.jpg' %}" alt="kal" class="border-radius-lg shadow">
+                        <img src="{% static 'assets/img/ivana-square.jpg' %}" alt="kal" class="border-radius-lg shadow">
                       </div>
                       <div class="d-flex align-items-start flex-column justify-content-center">
                         <h6 class="mb-0 text-sm">Ivanna</h6>
@@ -187,7 +187,7 @@
                     </li>
                     <li class="list-group-item border-0 d-flex align-items-center px-0 mb-2">
                       <div class="avatar me-3">
-                        <img src="{% static 'assets/img/django-material-dashboard/team-4.jpg' %}" alt="kal" class="border-radius-lg shadow">
+                        <img src="{% static 'assets/img/team-4.jpg' %}" alt="kal" class="border-radius-lg shadow">
                       </div>
                       <div class="d-flex align-items-start flex-column justify-content-center">
                         <h6 class="mb-0 text-sm">Peterson</h6>
@@ -197,7 +197,7 @@
                     </li>
                     <li class="list-group-item border-0 d-flex align-items-center px-0">
                       <div class="avatar me-3">
-                        <img src="{% static 'assets/img/django-material-dashboard/team-3.jpg' %}" alt="kal" class="border-radius-lg shadow">
+                        <img src="{% static 'assets/img/team-3.jpg' %}" alt="kal" class="border-radius-lg shadow">
                       </div>
                       <div class="d-flex align-items-start flex-column justify-content-center">
                         <h6 class="mb-0 text-sm">Nick Daniel</h6>
@@ -219,7 +219,7 @@
                   <div class="card card-blog card-plain">
                     <div class="card-header p-0 mt-n4 mx-3">
                       <a class="d-block shadow-xl border-radius-xl">
-                        <img src="{% static 'assets/img/django-material-dashboard/home-decor-1.jpg' %}" alt="img-blur-shadow" class="img-fluid shadow border-radius-xl">
+                        <img src="{% static 'assets/img/home-decor-1.jpg' %}" alt="img-blur-shadow" class="img-fluid shadow border-radius-xl">
                       </a>
                     </div>
                     <div class="card-body p-3">
@@ -236,16 +236,16 @@
                         <button type="button" class="btn btn-outline-primary btn-sm mb-0">View Project</button>
                         <div class="avatar-group mt-2">
                           <a href="javascript:;" class="avatar avatar-xs rounded-circle" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Elena Morison">
-                            <img alt="Image placeholder" src="{% static 'assets/img/django-material-dashboard/team-1.jpg' %}">
+                            <img alt="Image placeholder" src="{% static 'assets/img/team-1.jpg' %}">
                           </a>
                           <a href="javascript:;" class="avatar avatar-xs rounded-circle" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Ryan Milly">
-                            <img alt="Image placeholder" src="{% static 'assets/img/django-material-dashboard/team-2.jpg' %}">
+                            <img alt="Image placeholder" src="{% static 'assets/img/team-2.jpg' %}">
                           </a>
                           <a href="javascript:;" class="avatar avatar-xs rounded-circle" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Nick Daniel">
-                            <img alt="Image placeholder" src="{% static 'assets/img/django-material-dashboard/team-3.jpg' %}">
+                            <img alt="Image placeholder" src="{% static 'assets/img/team-3.jpg' %}">
                           </a>
                           <a href="javascript:;" class="avatar avatar-xs rounded-circle" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Peterson">
-                            <img alt="Image placeholder" src="{% static 'assets/img/django-material-dashboard/team-4.jpg' %}">
+                            <img alt="Image placeholder" src="{% static 'assets/img/team-4.jpg' %}">
                           </a>
                         </div>
                       </div>
@@ -256,7 +256,7 @@
                   <div class="card card-blog card-plain">
                     <div class="card-header p-0 mt-n4 mx-3">
                       <a class="d-block shadow-xl border-radius-xl">
-                        <img src="{% static 'assets/img/django-material-dashboard/home-decor-2.jpg' %}" alt="img-blur-shadow" class="img-fluid shadow border-radius-lg">
+                        <img src="{% static 'assets/img/home-decor-2.jpg' %}" alt="img-blur-shadow" class="img-fluid shadow border-radius-lg">
                       </a>
                     </div>
                     <div class="card-body p-3">
@@ -273,16 +273,16 @@
                         <button type="button" class="btn btn-outline-primary btn-sm mb-0">View Project</button>
                         <div class="avatar-group mt-2">
                           <a href="javascript:;" class="avatar avatar-xs rounded-circle" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Nick Daniel">
-                            <img alt="Image placeholder" src="{% static 'assets/img/django-material-dashboard/team-3.jpg' %}">
+                            <img alt="Image placeholder" src="{% static 'assets/img/team-3.jpg' %}">
                           </a>
                           <a href="javascript:;" class="avatar avatar-xs rounded-circle" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Peterson">
-                            <img alt="Image placeholder" src="{% static 'assets/img/django-material-dashboard/team-4.jpg' %}">
+                            <img alt="Image placeholder" src="{% static 'assets/img/team-4.jpg' %}">
                           </a>
                           <a href="javascript:;" class="avatar avatar-xs rounded-circle" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Elena Morison">
-                            <img alt="Image placeholder" src="{% static 'assets/img/django-material-dashboard/team-1.jpg' %}">
+                            <img alt="Image placeholder" src="{% static 'assets/img/team-1.jpg' %}">
                           </a>
                           <a href="javascript:;" class="avatar avatar-xs rounded-circle" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Ryan Milly">
-                            <img alt="Image placeholder" src="{% static 'assets/img/django-material-dashboard/team-2.jpg' %}">
+                            <img alt="Image placeholder" src="{% static 'assets/img/team-2.jpg' %}">
                           </a>
                         </div>
                       </div>
@@ -293,7 +293,7 @@
                   <div class="card card-blog card-plain">
                     <div class="card-header p-0 mt-n4 mx-3">
                       <a class="d-block shadow-xl border-radius-xl">
-                        <img src="{% static 'assets/img/django-material-dashboard/home-decor-3.jpg' %}" alt="img-blur-shadow" class="img-fluid shadow border-radius-xl">
+                        <img src="{% static 'assets/img/home-decor-3.jpg' %}" alt="img-blur-shadow" class="img-fluid shadow border-radius-xl">
                       </a>
                     </div>
                     <div class="card-body p-3">
@@ -310,16 +310,16 @@
                         <button type="button" class="btn btn-outline-primary btn-sm mb-0">View Project</button>
                         <div class="avatar-group mt-2">
                           <a href="javascript:;" class="avatar avatar-xs rounded-circle" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Peterson">
-                            <img alt="Image placeholder" src="{% static 'assets/img/django-material-dashboard/team-4.jpg' %}">
+                            <img alt="Image placeholder" src="{% static 'assets/img/team-4.jpg' %}">
                           </a>
                           <a href="javascript:;" class="avatar avatar-xs rounded-circle" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Nick Daniel">
-                            <img alt="Image placeholder" src="{% static 'assets/img/django-material-dashboard/team-3.jpg' %}">
+                            <img alt="Image placeholder" src="{% static 'assets/img/team-3.jpg' %}">
                           </a>
                           <a href="javascript:;" class="avatar avatar-xs rounded-circle" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Ryan Milly">
-                            <img alt="Image placeholder" src="{% static 'assets/img/django-material-dashboard/team-2.jpg' %}">
+                            <img alt="Image placeholder" src="{% static 'assets/img/team-2.jpg' %}">
                           </a>
                           <a href="javascript:;" class="avatar avatar-xs rounded-circle" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Elena Morison">
-                            <img alt="Image placeholder" src="{% static 'assets/img/django-material-dashboard/team-1.jpg' %}">
+                            <img alt="Image placeholder" src="{% static 'assets/img/team-1.jpg' %}">
                           </a>
                         </div>
                       </div>
@@ -347,13 +347,13 @@
                         <button type="button" class="btn btn-outline-primary btn-sm mb-0">View Project</button>
                         <div class="avatar-group mt-2">
                           <a href="javascript:;" class="avatar avatar-xs rounded-circle" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Peterson">
-                            <img alt="Image placeholder" src="{% static 'assets/img/django-material-dashboard/team-4.jpg' %}">
+                            <img alt="Image placeholder" src="{% static 'assets/img/team-4.jpg' %}">
                           </a>
                           <a href="javascript:;" class="avatar avatar-xs rounded-circle" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Nick Daniel">
-                            <img alt="Image placeholder" src="{% static 'assets/img/django-material-dashboard/team-3.jpg' %}">
+                            <img alt="Image placeholder" src="{% static 'assets/img/team-3.jpg' %}">
                           </a>
                           <a href="javascript:;" class="avatar avatar-xs rounded-circle" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Ryan Milly">
-                            <img alt="Image placeholder" src="{% static 'assets/img/django-material-dashboard/team-2.jpg' %}">
+                            <img alt="Image placeholder" src="{% static 'assets/img/team-2.jpg' %}">
                           </a>
                           <a href="javascript:;" class="avatar avatar-xs rounded-circle" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Elena Morison">
                             <img alt="Image placeholder" src="{% static 'assets/img/team-1.jpg' %}">
