--- a/frontend/templates/home/django-material-dashboard/rtl.html
+++ b/frontend/templates/home/django-material-dashboard/rtl.html
@@ -346,7 +346,7 @@
                       <td>
                         <div class="d-flex px-2 py-1">
                           <div>
-                            <img src="{% static 'assets/img/django-material-dashboard/small-logos/logo-jira.svg' %}" class="avatar avatar-sm ms-3">
+                            <img src="{% static 'assets/img/small-logos/logo-jira.svg' %}" class="avatar avatar-sm ms-3">
                           </div>
                           <div class="d-flex flex-column justify-content-center">
                             <h6 class="mb-0 text-sm">أضف صفحة التسعير الجديدة</h6>
@@ -356,7 +356,7 @@
                       <td>
                         <div class="avatar-group mt-2">
                           <a href="javascript:;" class="avatar avatar-xs rounded-circle" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Ryan Tompson">
-                            <img alt="Image placeholder" src="{% static 'assets/img/django-material-dashboard/team-4.jpg' %}">
+                            <img alt="Image placeholder" src="{% static 'assets/img/team-4.jpg' %}">
                           </a>
                         </div>
                       </td>
@@ -380,7 +380,7 @@
                       <td>
                         <div class="d-flex px-2 py-1">
                           <div>
-                            <img src="{% static 'assets/img/django-material-dashboard/small-logos/logo-invision.svg' %}" class="avatar avatar-sm ms-3">
+                            <img src="{% static 'assets/img/small-logos/logo-invision.svg' %}" class="avatar avatar-sm ms-3">
                           </div>
                           <div class="d-flex flex-column justify-content-center">
                             <h6 class="mb-0 text-sm">إعادة تصميم متجر جديد على الإنترنت</h6>
@@ -390,10 +390,10 @@
                       <td>
                         <div class="avatar-group mt-2">
                           <a href="javascript:;" class="avatar avatar-xs rounded-circle" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Ryan Tompson">
-                            <img alt="Image placeholder" src="{% static 'assets/img/django-material-dashboard/team-1.jpg' %}">
+                            <img alt="Image placeholder" src="{% static 'assets/img/team-1.jpg' %}">
                           </a>
                           <a href="javascript:;" class="avatar avatar-xs rounded-circle" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Jessica Doe">
-                            <img alt="Image placeholder" src="{% static 'assets/img/django-material-dashboard/team-4.jpg' %}">
+                            <img alt="Image placeholder" src="{% static 'assets/img/team-4.jpg' %}">
                           </a>
                         </div>
                       </td>
@@ -498,7 +498,7 @@
 <!-- Specific Page JS goes HERE  -->
 {% block javascripts %}
 
-  <script src="{% static 'assets/js/django-material-dashboard/plugins/chartjs.min.js' %}"></script>
+  <script src="{% static 'assets/js/plugins/chartjs.min.js' %}"></script>
   <script>
     var ctx = document.getElementById("chart-bars").getContext("2d");
 
