--- a/frontend/templates/home/django-material-kit/ui-elements-avatars.html
+++ b/frontend/templates/home/django-material-kit/ui-elements-avatars.html
@@ -17,8 +17,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="apple-touch-icon" sizes="76x76" href="{% static 'assets/img/django-material-kit/medna-icon.png' %}">
-  <link rel="icon" type="image/png" href="{% static 'assets/img/django-material-kit/favicon.png' %}">
+  <link rel="apple-touch-icon" sizes="76x76" href="{% static 'assets/img/medna-icon.png' %}">
+  <link rel="icon" type="image/png" href="{% static 'assets/img/favicon.png' %}">
 
   <title>
     Maine-eDNA Metadata - Avatars | Maine EPSCoR
@@ -27,14 +27,14 @@
   <!--     Fonts and icons     -->
   <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900|Roboto+Slab:400,700" />
   <!-- Nucleo Icons -->
-  <link rel="stylesheet" type="text/css" href="{% static 'assets/css/django-material-kit/nucleo-icons.css' %}">
-  <link rel="stylesheet" type="text/css" href="{% static 'assets/css/django-material-kit/nucleo-svg.css' %}">
+  <link rel="stylesheet" type="text/css" href="{% static 'assets/css/nucleo-icons.css' %}">
+  <link rel="stylesheet" type="text/css" href="{% static 'assets/css/nucleo-svg.css' %}">
   <!-- Font Awesome Icons -->
   <script src="https://kit.fontawesome.com/42d5adcbca.js" crossorigin="anonymous"></script>
   <!-- Material Icons -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Round" rel="stylesheet">
   <!-- CSS Files -->
-  <link id="pagestyle" rel="stylesheet" type="text/css" href="{% static 'assets/css/django-material-kit/material-kit.css' %}">
+  <link id="pagestyle" rel="stylesheet" type="text/css" href="{% static 'assets/css/material-kit.css' %}">
 
 </head>
 <body class="avatars-sections">
@@ -91,24 +91,24 @@
     <div class="col-12">
       <div class="avatar-group">
         <a href="javascript:;" class="avatar avatar-lg rounded-circle" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Ryan Tompson">
-          <img alt="Image placeholder" src="{% static 'assets/img/django-material-kit/team-1.jpg">
+          <img alt="Image placeholder" src="{% static 'assets/img/team-1.jpg">
         </a>
         <a href="javascript:;" class="avatar avatar-lg rounded-circle" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Romina Hadid">
-          <img alt="Image placeholder" src="{% static 'assets/img/django-material-kit/team-2.jpg">
+          <img alt="Image placeholder" src="{% static 'assets/img/team-2.jpg">
         </a>
         <a href="javascript:;" class="avatar avatar-lg rounded-circle" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Alexander Smith">
-          <img alt="Image placeholder" src="{% static 'assets/img/django-material-kit/team-3.jpg">
+          <img alt="Image placeholder" src="{% static 'assets/img/team-3.jpg">
         </a>
         <a href="javascript:;" class="avatar avatar-lg rounded-circle" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Jessica Doe">
-          <img alt="Image placeholder" src="{% static 'assets/img/django-material-kit/team-4.jpg">
+          <img alt="Image placeholder" src="{% static 'assets/img/team-4.jpg">
         </a>
       </div>
     </div>
   </div>
 </div>
 
-        <script src="{% static 'assets/js/django-material-kit/core/popper.min.js' %}" type="text/javascript"></script>
-        <script src="{% static 'assets/js/django-material-kit/core/bootstrap.min.js' %}" type="text/javascript"></script>
+        <script src="{% static 'assets/js/core/popper.min.js' %}" type="text/javascript"></script>
+        <script src="{% static 'assets/js/core/bootstrap.min.js' %}" type="text/javascript"></script>
         <script>
           var tooltipTriggerList = [].slice.call(document.querySelectorAll(&#39;[data-bs-toggle="tooltip"]&#39;))
         var tooltipList = tooltipTriggerList.map(function (tooltipTriggerEl) {
@@ -124,7 +124,7 @@
     <span class="nt">&lt;div</span> <span class="na">class=</span><span class="s">"col-12"</span><span class="nt">&gt;</span>
       <span class="nt">&lt;div</span> <span class="na">class=</span><span class="s">"avatar-group"</span><span class="nt">&gt;</span>
         <span class="nt">&lt;a</span> <span class="na">href=</span><span class="s">"javascript:;"</span> <span class="na">class=</span><span class="s">"avatar avatar-lg rounded-circle"</span> <span class="na">data-bs-toggle=</span><span class="s">"tooltip"</span> <span class="na">data-bs-placement=</span><span class="s">"bottom"</span> <span class="na">title=</span><span class="s">"Ryan Tompson"</span><span class="nt">&gt;</span>
-          <span class="nt">&lt;img</span> <span class="na">alt=</span><span class="s">"Image placeholder"</span> <span class="na">src=</span><span class="s">"{% static 'assets/img/django-material-kit/team-1.jpg"</span><span class="nt">&gt;</span>
+          <span class="nt">&lt;img</span> <span class="na">alt=</span><span class="s">"Image placeholder"</span> <span class="na">src=</span><span class="s">"{% static 'assets/img/team-1.jpg"</span><span class="nt">&gt;</span>
         <span class="nt">&lt;/a&gt;</span>
         <span class="nt">&lt;a</span> <span class="na">href=</span><span class="s">"javascript:;"</span> <span class="na">class=</span><span class="s">"avatar avatar-lg rounded-circle"</span> <span class="na">data-bs-toggle=</span><span class="s">"tooltip"</span> <span class="na">data-bs-placement=</span><span class="s">"bottom"</span> <span class="na">title=</span><span class="s">"Romina Hadid"</span><span class="nt">&gt;</span>
           <span class="nt">&lt;img</span> <span class="na">alt=</span><span class="s">"Image placeholder"</span> <span class="na">src=</span><span class="s">"{% static 'assets/img/team-2.jpg"</span><span class="nt">&gt;</span>
