--- a/frontend/templates/home/django-material-kit/ui-navigation-navbars.html
+++ b/frontend/templates/home/django-material-kit/ui-navigation-navbars.html
@@ -18,8 +18,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="apple-touch-icon" sizes="76x76" href="{% static 'assets/img/django-material-kit/medna-icon.png' %}">
-  <link rel="icon" type="image/png" href="{% static 'assets/img/django-material-kit/favicon.png' %}">
+  <link rel="apple-touch-icon" sizes="76x76" href="{% static 'assets/img/medna-icon.png' %}">
+  <link rel="icon" type="image/png" href="{% static 'assets/img/favicon.png' %}">
 
   <title>
     Maine-eDNA Metadata - Navbars | Maine EPSCoR
@@ -28,14 +28,14 @@
   <!--     Fonts and icons     -->
   <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900|Roboto+Slab:400,700" />
   <!-- Nucleo Icons -->
-  <link rel="stylesheet" type="text/css" href="{% static 'assets/css/django-material-kit/nucleo-icons.css' %}">
-  <link rel="stylesheet" type="text/css" href="{% static 'assets/css/django-material-kit/nucleo-svg.css' %}">
+  <link rel="stylesheet" type="text/css" href="{% static 'assets/css/nucleo-icons.css' %}">
+  <link rel="stylesheet" type="text/css" href="{% static 'assets/css/nucleo-svg.css' %}">
   <!-- Font Awesome Icons -->
   <script src="https://kit.fontawesome.com/42d5adcbca.js" crossorigin="anonymous"></script>
   <!-- Material Icons -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Round" rel="stylesheet">
   <!-- CSS Files -->
-  <link id="pagestyle" rel="stylesheet" type="text/css" href="{% static 'assets/css/django-material-kit/material-kit.css' %}">
+  <link id="pagestyle" rel="stylesheet" type="text/css" href="{% static 'assets/css/material-kit.css' %}">
 
 </head>
 <body class="navbars-sections">
@@ -107,27 +107,27 @@
         <li class="nav-item mx-2">
           <a class="nav-link ps-2 d-flex justify-content-between cursor-pointer align-items-center" role="button">
             Pages
-            <img src="{% static 'assets/img/django-material-kit/down-arrow-white.svg' %}" alt="down-arrow" class="arrow ms-1">
+            <img src="{% static 'assets/img/down-arrow-white.svg' %}" alt="down-arrow" class="arrow ms-1">
           </a>
         </li>
 
         <li class="nav-item mx-2">
           <a class="nav-link ps-2 d-flex justify-content-between cursor-pointer align-items-center" role="button">
             Account
-            <img src="{% static 'assets/img/django-material-kit/down-arrow-white.svg' %}" alt="down-arrow" class="arrow ms-1">
+            <img src="{% static 'assets/img/down-arrow-white.svg' %}" alt="down-arrow" class="arrow ms-1">
           </a>
         </li>
         <li class="nav-item mx-2">
           <a class="nav-link ps-2 d-flex justify-content-between cursor-pointer align-items-center" role="button">
             Blocks
-            <img src="{% static 'assets/img/django-material-kit/down-arrow-white.svg' %}" alt="down-arrow" class="arrow ms-1">
+            <img src="{% static 'assets/img/down-arrow-white.svg' %}" alt="down-arrow" class="arrow ms-1">
           </a>
         </li>
 
         <li class="nav-item dropdown dropdown-hover mx-2">
           <a class="nav-link ps-2 d-flex justify-content-between cursor-pointer align-items-center" role="button">
             Docs
-            <img src="{% static 'assets/img/django-material-kit/down-arrow-white.svg' %}" alt="down-arrow" class="arrow ms-1">
+            <img src="{% static 'assets/img/down-arrow-white.svg' %}" alt="down-arrow" class="arrow ms-1">
           </a>
         </li>
       </ul>
@@ -143,8 +143,8 @@
 <!-- End Navbar -->
 
 
-        <script src="{% static 'assets/js/django-material-kit/core/popper.min.js' %}" type="text/javascript"></script>
-        <script src="{% static 'assets/js/django-material-kit/core/bootstrap.min.js' %}" type="text/javascript"></script>
+        <script src="{% static 'assets/js/core/popper.min.js' %}" type="text/javascript"></script>
+        <script src="{% static 'assets/js/core/bootstrap.min.js' %}" type="text/javascript"></script>
         '></iframe>
             </div>
             <div class="tab-pane" id="code-navbar-dark">
@@ -171,27 +171,27 @@
         <span class="nt">&lt;li</span> <span class="na">class=</span><span class="s">"nav-item mx-2"</span><span class="nt">&gt;</span>
           <span class="nt">&lt;a</span> <span class="na">class=</span><span class="s">"nav-link ps-2 d-flex justify-content-between cursor-pointer align-items-center"</span> <span class="na">role=</span><span class="s">"button"</span><span class="nt">&gt;</span>
             Pages
-            <span class="nt">&lt;img</span> <span class="na">src=</span><span class="s">"{% static 'assets/img/django-material-kit/down-arrow-white.svg' %}"</span> <span class="na">alt=</span><span class="s">"down-arrow"</span> <span class="na">class=</span><span class="s">"arrow ms-1"</span><span class="nt">&gt;</span>
+            <span class="nt">&lt;img</span> <span class="na">src=</span><span class="s">"{% static 'assets/img/down-arrow-white.svg' %}"</span> <span class="na">alt=</span><span class="s">"down-arrow"</span> <span class="na">class=</span><span class="s">"arrow ms-1"</span><span class="nt">&gt;</span>
           <span class="nt">&lt;/a&gt;</span>
         <span class="nt">&lt;/li&gt;</span>
 
         <span class="nt">&lt;li</span> <span class="na">class=</span><span class="s">"nav-item mx-2"</span><span class="nt">&gt;</span>
           <span class="nt">&lt;a</span> <span class="na">class=</span><span class="s">"nav-link ps-2 d-flex justify-content-between cursor-pointer align-items-center"</span> <span class="na">role=</span><span class="s">"button"</span><span class="nt">&gt;</span>
             Account
-            <span class="nt">&lt;img</span> <span class="na">src=</span><span class="s">"{% static 'assets/img/django-material-kit/down-arrow-white.svg' %}"</span> <span class="na">alt=</span><span class="s">"down-arrow"</span> <span class="na">class=</span><span class="s">"arrow ms-1"</span><span class="nt">&gt;</span>
+            <span class="nt">&lt;img</span> <span class="na">src=</span><span class="s">"{% static 'assets/img/down-arrow-white.svg' %}"</span> <span class="na">alt=</span><span class="s">"down-arrow"</span> <span class="na">class=</span><span class="s">"arrow ms-1"</span><span class="nt">&gt;</span>
           <span class="nt">&lt;/a&gt;</span>
         <span class="nt">&lt;/li&gt;</span>
         <span class="nt">&lt;li</span> <span class="na">class=</span><span class="s">"nav-item mx-2"</span><span class="nt">&gt;</span>
           <span class="nt">&lt;a</span> <span class="na">class=</span><span class="s">"nav-link ps-2 d-flex justify-content-between cursor-pointer align-items-center"</span> <span class="na">role=</span><span class="s">"button"</span><span class="nt">&gt;</span>
             Blocks
-            <span class="nt">&lt;img</span> <span class="na">src=</span><span class="s">"{% static 'assets/img/django-material-kit/down-arrow-white.svg' %}"</span> <span class="na">alt=</span><span class="s">"down-arrow"</span> <span class="na">class=</span><span class="s">"arrow ms-1"</span><span class="nt">&gt;</span>
+            <span class="nt">&lt;img</span> <span class="na">src=</span><span class="s">"{% static 'assets/img/down-arrow-white.svg' %}"</span> <span class="na">alt=</span><span class="s">"down-arrow"</span> <span class="na">class=</span><span class="s">"arrow ms-1"</span><span class="nt">&gt;</span>
           <span class="nt">&lt;/a&gt;</span>
         <span class="nt">&lt;/li&gt;</span>
 
         <span class="nt">&lt;li</span> <span class="na">class=</span><span class="s">"nav-item dropdown dropdown-hover mx-2"</span><span class="nt">&gt;</span>
           <span class="nt">&lt;a</span> <span class="na">class=</span><span class="s">"nav-link ps-2 d-flex justify-content-between cursor-pointer align-items-center"</span> <span class="na">role=</span><span class="s">"button"</span><span class="nt">&gt;</span>
             Docs
-            <span class="nt">&lt;img</span> <span class="na">src=</span><span class="s">"{% static 'assets/img/django-material-kit/down-arrow-white.svg' %}"</span> <span class="na">alt=</span><span class="s">"down-arrow"</span> <span class="na">class=</span><span class="s">"arrow ms-1"</span><span class="nt">&gt;</span>
+            <span class="nt">&lt;img</span> <span class="na">src=</span><span class="s">"{% static 'assets/img/down-arrow-white.svg' %}"</span> <span class="na">alt=</span><span class="s">"down-arrow"</span> <span class="na">class=</span><span class="s">"arrow ms-1"</span><span class="nt">&gt;</span>
           <span class="nt">&lt;/a&gt;</span>
         <span class="nt">&lt;/li&gt;</span>
       <span class="nt">&lt;/ul&gt;</span>
