--- a/frontend/static/deprecated/frontend/css/fonts.css
+++ b/frontend/static/deprecated/frontend/css/fonts.css
@@ -1,20 +1,20 @@
 @font-face {
     font-family: 'Roboto';
-    src: url('../fonts/Roboto-Bold-webfont.woff');
+    src: url('/fontsRoboto-Bold-webfont.woff');
     font-weight: 700;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'Roboto';
-    src: url('../fonts/Roboto-Regular-webfont.woff');
+    src: url('/fontsRoboto-Regular-webfont.woff');
     font-weight: 400;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'Roboto';
-    src: url('../fonts/Roboto-Light-webfont.woff');
+    src: url('/fontsRoboto-Light-webfont.woff');
     font-weight: 300;
     font-style: normal;
 }
