--- a/frontend/templates/home/django-material-dashboard/index.html
+++ b/frontend/templates/home/django-material-dashboard/index.html
@@ -183,7 +183,7 @@
                       <td>
                         <div class="d-flex px-2 py-1">
                           <div>
-                            <img src="{% static 'assets/img/django-material-dashboard/small-logos/logo-xd.svg' %}" class="avatar avatar-sm me-3" alt="xd">
+                            <img src="{% static 'assets/img/small-logos/logo-xd.svg' %}" class="avatar avatar-sm me-3" alt="xd">
                           </div>
                           <div class="d-flex flex-column justify-content-center">
                             <h6 class="mb-0 text-sm">Material XD Version</h6>
@@ -193,16 +193,16 @@
                       <td>
                         <div class="avatar-group mt-2">
                           <a href="javascript:;" class="avatar avatar-xs rounded-circle" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Ryan Tompson">
-                            <img src="{% static 'assets/img/django-material-dashboard/team-1.jpg' %}" alt="team1">
+                            <img src="{% static 'assets/img/team-1.jpg' %}" alt="team1">
                           </a>
                           <a href="javascript:;" class="avatar avatar-xs rounded-circle" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Romina Hadid">
-                            <img src="{% static 'assets/img/django-material-dashboard/team-2.jpg' %}" alt="team2">
+                            <img src="{% static 'assets/img/team-2.jpg' %}" alt="team2">
                           </a>
                           <a href="javascript:;" class="avatar avatar-xs rounded-circle" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Alexander Smith">
-                            <img src="{% static 'assets/img/django-material-dashboard/team-3.jpg' %}" alt="team3">
+                            <img src="{% static 'assets/img/team-3.jpg' %}" alt="team3">
                           </a>
                           <a href="javascript:;" class="avatar avatar-xs rounded-circle" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Jessica Doe">
-                            <img src="{% static 'assets/img/django-material-dashboard/team-4.jpg' %}" alt="team4">
+                            <img src="{% static 'assets/img/team-4.jpg' %}" alt="team4">
                           </a>
                         </div>
                       </td>
@@ -226,7 +226,7 @@
                       <td>
                         <div class="d-flex px-2 py-1">
                           <div>
-                            <img src="{% static 'assets/img/django-material-dashboard/small-logos/logo-atlassian.svg' %}" class="avatar avatar-sm me-3" alt="atlassian">
+                            <img src="{% static 'assets/img/small-logos/logo-atlassian.svg' %}" class="avatar avatar-sm me-3" alt="atlassian">
                           </div>
                           <div class="d-flex flex-column justify-content-center">
                             <h6 class="mb-0 text-sm">Add Progress Track</h6>
@@ -236,10 +236,10 @@
                       <td>
                         <div class="avatar-group mt-2">
                           <a href="javascript:;" class="avatar avatar-xs rounded-circle" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Romina Hadid">
-                            <img src="{% static 'assets/img/django-material-dashboard/team-2.jpg' %}" alt="team5">
+                            <img src="{% static 'assets/img/team-2.jpg' %}" alt="team5">
                           </a>
                           <a href="javascript:;" class="avatar avatar-xs rounded-circle" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Jessica Doe">
-                            <img src="{% static 'assets/img/django-material-dashboard/team-4.jpg' %}" alt="team6">
+                            <img src="{% static 'assets/img/team-4.jpg' %}" alt="team6">
                           </a>
                         </div>
                       </td>
@@ -263,7 +263,7 @@
                       <td>
                         <div class="d-flex px-2 py-1">
                           <div>
-                            <img src="{% static 'assets/img/django-material-dashboard/small-logos/logo-slack.svg' %}" class="avatar avatar-sm me-3" alt="team7">
+                            <img src="{% static 'assets/img/small-logos/logo-slack.svg' %}" class="avatar avatar-sm me-3" alt="team7">
                           </div>
                           <div class="d-flex flex-column justify-content-center">
                             <h6 class="mb-0 text-sm">Fix Platform Errors</h6>
@@ -273,10 +273,10 @@
                       <td>
                         <div class="avatar-group mt-2">
                           <a href="javascript:;" class="avatar avatar-xs rounded-circle" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Romina Hadid">
-                            <img src="{% static 'assets/img/django-material-dashboard/team-3.jpg' %}" alt="team8">
+                            <img src="{% static 'assets/img/team-3.jpg' %}" alt="team8">
                           </a>
                           <a href="javascript:;" class="avatar avatar-xs rounded-circle" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Jessica Doe">
-                            <img src="{% static 'assets/img/django-material-dashboard/team-1.jpg' %}" alt="team9">
+                            <img src="{% static 'assets/img/team-1.jpg' %}" alt="team9">
                           </a>
                         </div>
                       </td>
@@ -300,7 +300,7 @@
                       <td>
                         <div class="d-flex px-2 py-1">
                           <div>
-                            <img src="{% static 'assets/img/django-material-dashboard/small-logos/logo-spotify.svg' %}" class="avatar avatar-sm me-3" alt="spotify">
+                            <img src="{% static 'assets/img/small-logos/logo-spotify.svg' %}" class="avatar avatar-sm me-3" alt="spotify">
                           </div>
                           <div class="d-flex flex-column justify-content-center">
                             <h6 class="mb-0 text-sm">Launch our Mobile App</h6>
@@ -310,16 +310,16 @@
                       <td>
                         <div class="avatar-group mt-2">
                           <a href="javascript:;" class="avatar avatar-xs rounded-circle" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Ryan Tompson">
-                            <img src="{% static 'assets/img/django-material-dashboard/team-4.jpg' %}" alt="user1">
+                            <img src="{% static 'assets/img/team-4.jpg' %}" alt="user1">
                           </a>
                           <a href="javascript:;" class="avatar avatar-xs rounded-circle" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Romina Hadid">
-                            <img src="{% static 'assets/img/django-material-dashboard/team-3.jpg' %}" alt="user2">
+                            <img src="{% static 'assets/img/team-3.jpg' %}" alt="user2">
                           </a>
                           <a href="javascript:;" class="avatar avatar-xs rounded-circle" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Alexander Smith">
-                            <img src="{% static 'assets/img/django-material-dashboard/team-4.jpg' %}" alt="user3">
+                            <img src="{% static 'assets/img/team-4.jpg' %}" alt="user3">
                           </a>
                           <a href="javascript:;" class="avatar avatar-xs rounded-circle" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Jessica Doe">
-                            <img src="{% static 'assets/img/django-material-dashboard/team-1.jpg' %}" alt="user4">
+                            <img src="{% static 'assets/img/team-1.jpg' %}" alt="user4">
                           </a>
                         </div>
                       </td>
@@ -343,7 +343,7 @@
                       <td>
                         <div class="d-flex px-2 py-1">
                           <div>
-                            <img src="{% static 'assets/img/django-material-dashboard/small-logos/logo-jira.svg' %}" class="avatar avatar-sm me-3" alt="jira">
+                            <img src="{% static 'assets/img/small-logos/logo-jira.svg' %}" class="avatar avatar-sm me-3" alt="jira">
                           </div>
                           <div class="d-flex flex-column justify-content-center">
                             <h6 class="mb-0 text-sm">Add the New Pricing Page</h6>
@@ -353,7 +353,7 @@
                       <td>
                         <div class="avatar-group mt-2">
                           <a href="javascript:;" class="avatar avatar-xs rounded-circle" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Ryan Tompson">
-                            <img src="{% static 'assets/img/django-material-dashboard/team-4.jpg' %}" alt="user5">
+                            <img src="{% static 'assets/img/team-4.jpg' %}" alt="user5">
                           </a>
                         </div>
                       </td>
@@ -495,7 +495,7 @@
 <!-- Specific Page JS goes HERE  -->
 {% block javascripts %}
 
-  <script src="{% static 'assets/js/django-material-dashboard/plugins/chartjs.min.js' %}"></script>
+  <script src="{% static 'assets/js/plugins/chartjs.min.js' %}"></script>
   <script>
     var ctx = document.getElementById("chart-bars").getContext("2d");
 
