--- a/frontend/templates/home/django-material-dashboard/tables.html
+++ b/frontend/templates/home/django-material-dashboard/tables.html
@@ -34,7 +34,7 @@
                     <td>
                       <div class="d-flex px-2 py-1">
                         <div>
-                          <img src="{% static 'assets/img/django-material-dashboard/team-2.jpg' %}" class="avatar avatar-sm me-3 border-radius-lg" alt="user1">
+                          <img src="{% static 'assets/img/team-2.jpg' %}" class="avatar avatar-sm me-3 border-radius-lg" alt="user1">
                         </div>
                         <div class="d-flex flex-column justify-content-center">
                           <h6 class="mb-0 text-sm">John Michael</h6>
@@ -62,7 +62,7 @@
                     <td>
                       <div class="d-flex px-2 py-1">
                         <div>
-                          <img src="{% static 'assets/img/django-material-dashboard/team-3.jpg' %}" class="avatar avatar-sm me-3 border-radius-lg" alt="user2">
+                          <img src="{% static 'assets/img/team-3.jpg' %}" class="avatar avatar-sm me-3 border-radius-lg" alt="user2">
                         </div>
                         <div class="d-flex flex-column justify-content-center">
                           <h6 class="mb-0 text-sm">Alexa Liras</h6>
@@ -90,7 +90,7 @@
                     <td>
                       <div class="d-flex px-2 py-1">
                         <div>
-                          <img src="{% static 'assets/img/django-material-dashboard/team-4.jpg' %}" class="avatar avatar-sm me-3 border-radius-lg" alt="user3">
+                          <img src="{% static 'assets/img/team-4.jpg' %}" class="avatar avatar-sm me-3 border-radius-lg" alt="user3">
                         </div>
                         <div class="d-flex flex-column justify-content-center">
                           <h6 class="mb-0 text-sm">Laurent Perrier</h6>
@@ -118,7 +118,7 @@
                     <td>
                       <div class="d-flex px-2 py-1">
                         <div>
-                          <img src="{% static 'assets/img/django-material-dashboard/team-3.jpg' %}" class="avatar avatar-sm me-3 border-radius-lg" alt="user4">
+                          <img src="{% static 'assets/img/team-3.jpg' %}" class="avatar avatar-sm me-3 border-radius-lg" alt="user4">
                         </div>
                         <div class="d-flex flex-column justify-content-center">
                           <h6 class="mb-0 text-sm">Michael Levi</h6>
@@ -146,7 +146,7 @@
                     <td>
                       <div class="d-flex px-2 py-1">
                         <div>
-                          <img src="{% static 'assets/img/django-material-dashboard/team-2.jpg' %}" class="avatar avatar-sm me-3 border-radius-lg" alt="user5">
+                          <img src="{% static 'assets/img/team-2.jpg' %}" class="avatar avatar-sm me-3 border-radius-lg" alt="user5">
                         </div>
                         <div class="d-flex flex-column justify-content-center">
                           <h6 class="mb-0 text-sm">Richard Gran</h6>
@@ -174,7 +174,7 @@
                     <td>
                       <div class="d-flex px-2 py-1">
                         <div>
-                          <img src="{% static 'assets/img/django-material-dashboard/team-4.jpg' %}" class="avatar avatar-sm me-3 border-radius-lg" alt="user6">
+                          <img src="{% static 'assets/img/team-4.jpg' %}" class="avatar avatar-sm me-3 border-radius-lg" alt="user6">
                         </div>
                         <div class="d-flex flex-column justify-content-center">
                           <h6 class="mb-0 text-sm">Miriam Eric</h6>
@@ -230,7 +230,7 @@
                     <td>
                       <div class="d-flex px-2">
                         <div>
-                          <img src="{% static 'assets/img/django-material-dashboard/small-logos/logo-asana.svg' %}" class="avatar avatar-sm rounded-circle me-2" alt="spotify">
+                          <img src="{% static 'assets/img/small-logos/logo-asana.svg' %}" class="avatar avatar-sm rounded-circle me-2" alt="spotify">
                         </div>
                         <div class="my-auto">
                           <h6 class="mb-0 text-sm">Asana</h6>
@@ -263,7 +263,7 @@
                     <td>
                       <div class="d-flex px-2">
                         <div>
-                          <img src="{% static 'assets/img/django-material-dashboard/small-logos/github.svg' %}" class="avatar avatar-sm rounded-circle me-2" alt="invision">
+                          <img src="{% static 'assets/img/small-logos/github.svg' %}" class="avatar avatar-sm rounded-circle me-2" alt="invision">
                         </div>
                         <div class="my-auto">
                           <h6 class="mb-0 text-sm">Github</h6>
@@ -296,7 +296,7 @@
                     <td>
                       <div class="d-flex px-2">
                         <div>
-                          <img src="{% static 'assets/img/django-material-dashboard/small-logos/logo-atlassian.svg' %}" class="avatar avatar-sm rounded-circle me-2" alt="jira">
+                          <img src="{% static 'assets/img/small-logos/logo-atlassian.svg' %}" class="avatar avatar-sm rounded-circle me-2" alt="jira">
                         </div>
                         <div class="my-auto">
                           <h6 class="mb-0 text-sm">Atlassian</h6>
@@ -329,7 +329,7 @@
                     <td>
                       <div class="d-flex px-2">
                         <div>
-                          <img src="{% static 'assets/img/django-material-dashboard/small-logos/bootstrap.svg' %}" class="avatar avatar-sm rounded-circle me-2" alt="webdev">
+                          <img src="{% static 'assets/img/small-logos/bootstrap.svg' %}" class="avatar avatar-sm rounded-circle me-2" alt="webdev">
                         </div>
                         <div class="my-auto">
                           <h6 class="mb-0 text-sm">Bootstrap</h6>
@@ -362,7 +362,7 @@
                     <td>
                       <div class="d-flex px-2">
                         <div>
-                          <img src="{% static 'assets/img/django-material-dashboard/small-logos/logo-slack.svg' %}" class="avatar avatar-sm rounded-circle me-2" alt="slack">
+                          <img src="{% static 'assets/img/small-logos/logo-slack.svg' %}" class="avatar avatar-sm rounded-circle me-2" alt="slack">
                         </div>
                         <div class="my-auto">
                           <h6 class="mb-0 text-sm">Slack</h6>
@@ -395,7 +395,7 @@
                     <td>
                       <div class="d-flex px-2">
                         <div>
-                          <img src="{% static 'assets/img/django-material-dashboard/small-logos/devto.svg' %}" class="avatar avatar-sm rounded-circle me-2" alt="xd">
+                          <img src="{% static 'assets/img/small-logos/devto.svg' %}" class="avatar avatar-sm rounded-circle me-2" alt="xd">
                         </div>
                         <div class="my-auto">
                           <h6 class="mb-0 text-sm">Devto</h6>
