--- a/frontend/templates/home/django-material-kit/index.html
+++ b/frontend/templates/home/django-material-kit/index.html
@@ -18,7 +18,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link rel="apple-touch-icon" sizes="76x76" href="{% static 'assets/img/medna-icon.png' %}">
-  <link rel="icon" type="image/png" href="{% static 'assets/img/django-material-kit/favicon.png' %}">
+  <link rel="icon" type="image/png" href="{% static 'assets/img/favicon.png' %}">
 
   <title>
     Maine-eDNA Metadata - Presentation | Maine EPSCoR
@@ -27,14 +27,14 @@
   <!--     Fonts and icons     -->
   <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900|Roboto+Slab:400,700" />
   <!-- Nucleo Icons -->
-  <link rel="stylesheet" type="text/css" href="{% static 'assets/css/django-material-kit/nucleo-icons.css' %}">
-  <link rel="stylesheet" type="text/css" href="{% static 'assets/css/django-material-kit/nucleo-svg.css' %}">
+  <link rel="stylesheet" type="text/css" href="{% static 'assets/css/nucleo-icons.css' %}">
+  <link rel="stylesheet" type="text/css" href="{% static 'assets/css/nucleo-svg.css' %}">
   <!-- Font Awesome Icons -->
   <script src="https://kit.fontawesome.com/42d5adcbca.js" crossorigin="anonymous"></script>
   <!-- Material Icons -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Round" rel="stylesheet">
   <!-- CSS Files -->
-  <link id="pagestyle" rel="stylesheet" type="text/css" href="{% static 'assets/css/django-material-kit/material-kit.css' %}">
+  <link id="pagestyle" rel="stylesheet" type="text/css" href="{% static 'assets/css/material-kit.css' %}">
 
 </head>
 <body class="presentation-page bg-gray-200">
@@ -42,7 +42,7 @@
   {% include 'includes/django-material-kit/navigation.html' %}
 
   <header class="header-2">
-    <div class="page-header min-vh-75 relative" style="background-image: url('{% static 'assets/img/django-material-kit/bg2.jpg' %}')">
+    <div class="page-header min-vh-75 relative" style="background-image: url('{% static 'assets/img/bg2.jpg' %}')">
       <span class="mask bg-gradient-primary opacity-4"></span>
       <div class="container">
         <div class="row">
@@ -1024,26 +1024,26 @@
         <hr class="horizontal dark my-5">
         <div class="row">
           <div class="col-lg-2 col-md-4 col-6 ms-auto">
-            <img class="w-100 opacity-6" src="{% static 'assets/img/django-material-kit/logos/gray-logos/logo-apple.svg' %}" alt="Logo">
+            <img class="w-100 opacity-6" src="{% static 'assets/img/logos/gray-logos/logo-apple.svg' %}" alt="Logo">
           </div>
           <div class="col-lg-2 col-md-4 col-6">
-            <img class="w-100 opacity-6" src="{% static 'assets/img/django-material-kit/logos/gray-logos/logo-facebook.svg' %}" alt="Logo">
+            <img class="w-100 opacity-6" src="{% static 'assets/img/logos/gray-logos/logo-facebook.svg' %}" alt="Logo">
           </div>
           <div class="col-lg-2 col-md-4 col-6">
-            <img class="w-100 opacity-6" src="{% static 'assets/img/django-material-kit/logos/gray-logos/logo-nasa.svg' %}" alt="Logo">
+            <img class="w-100 opacity-6" src="{% static 'assets/img/logos/gray-logos/logo-nasa.svg' %}" alt="Logo">
           </div>
           <div class="col-lg-2 col-md-4 col-6 ms-lg-0 ms-md-auto">
-            <img class="w-100 opacity-6" src="{% static 'assets/img/django-material-kit/logos/gray-logos/logo-vodafone.svg' %}" alt="Logo">
+            <img class="w-100 opacity-6" src="{% static 'assets/img/logos/gray-logos/logo-vodafone.svg' %}" alt="Logo">
           </div>
           <div class="col-lg-2 col-md-4 col-6 me-md-auto mx-md-0 mx-auto">
-            <img class="w-100 opacity-6" src="{% static 'assets/img/django-material-kit/logos/gray-logos/logo-digitalocean.svg' %}" alt="Logo">
+            <img class="w-100 opacity-6" src="{% static 'assets/img/logos/gray-logos/logo-digitalocean.svg' %}" alt="Logo">
           </div>
         </div>
       </div>
     </section>
     <section class="py-sm-7" id="download-soft-ui">
       <div class="bg-gradient-dark position-relative m-3 border-radius-xl overflow-hidden">
-        <img src="{% static 'assets/img/django-material-kit/shapes/waves-white.svg' %}" alt="pattern-lines" class="position-absolute start-0 top-md-0 w-100 opacity-2">
+        <img src="{% static 'assets/img/shapes/waves-white.svg' %}" alt="pattern-lines" class="position-absolute start-0 top-md-0 w-100 opacity-2">
         <div class="container py-7 postion-relative z-index-2 position-relative">
           <div class="row">
             <div class="col-md-7 mx-auto text-center">
@@ -1068,7 +1068,7 @@
                 </div>
                 <div class="col-lg-2 col-4">
                   <a href="https://github.com/app-generator/django-material-kit">
-                    <img src="{% static 'assets/img/django-material-kit/logo-ct-dark.png' %}" class="img-fluid opacity-6" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Material Kit 2 - Free & Open Source Web UI Kit built over Bootstrap 5 by Creative Tim">
+                    <img src="{% static 'assets/img/logo-ct-dark.png' %}" class="img-fluid opacity-6" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Material Kit 2 - Free & Open Source Web UI Kit built over Bootstrap 5 by Creative Tim">
                   </a>
                 </div>
                 <div class="col-lg-2 col-4">
@@ -1149,7 +1149,7 @@
         <div class="col-md-3 mb-4 ms-auto">
           <div>
             <a href="https://umaine.edu/edna">
-              <img src="{% static 'assets/img/django-material-kit/logo-medna-dark.png' %}" class="mb-3 footer-logo" alt="main_logo">
+              <img src="{% static 'assets/img/logo-medna-dark.png' %}" class="mb-3 footer-logo" alt="main_logo">
             </a>
             <h6 class="font-weight-bolder mb-4">Maine-eDNA Metadata</h6>
           </div>
@@ -1278,23 +1278,23 @@
   </footer>
 
   <!--   Core JS Files   -->
-  <script src="{% static 'assets/js/django-material-kit/core/popper.min.js' %}" type="text/javascript"></script>
-  <script src="{% static 'assets/js/django-material-kit/core/bootstrap.min.js' %}" type="text/javascript"></script>
-  <script src="{% static 'assets/js/django-material-kit/plugins/perfect-scrollbar.min.js' %}"></script>
+  <script src="{% static 'assets/js/core/popper.min.js' %}" type="text/javascript"></script>
+  <script src="{% static 'assets/js/core/bootstrap.min.js' %}" type="text/javascript"></script>
+  <script src="{% static 'assets/js/plugins/perfect-scrollbar.min.js' %}"></script>
   <!--  Plugin for TypedJS, full documentation here: https://github.com/inorganik/CountUp.js -->
-  <script src="{% static 'assets/js/django-material-kit/plugins/countup.min.js' %}"></script>
+  <script src="{% static 'assets/js/plugins/countup.min.js' %}"></script>
   <!--  Plugin for Parallax, full documentation here: https://github.com/dixonandmoe/rellax -->
-  <script src="{% static 'assets/js/django-material-kit/plugins/rellax.min.js' %}"></script>
+  <script src="{% static 'assets/js/plugins/rellax.min.js' %}"></script>
   <!--  Plugin for TiltJS, full documentation here: https://gijsroge.github.io/tilt.js/ -->
-  <script src="{% static 'assets/js/django-material-kit/plugins/tilt.min.js' %}"></script>
+  <script src="{% static 'assets/js/plugins/tilt.min.js' %}"></script>
   <!--  Plugin for Selectpicker - ChoicesJS, full documentation here: https://github.com/jshjohnson/Choices -->
-  <script src="{% static 'assets/js/django-material-kit/plugins/choices.min.js' %}"></script>
+  <script src="{% static 'assets/js/plugins/choices.min.js' %}"></script>
   <!--  Plugin for Parallax, full documentation here: https://github.com/wagerfield/parallax  -->
-  <script src="{% static 'assets/js/django-material-kit/plugins/parallax.min.js' %}"></script>
+  <script src="{% static 'assets/js/plugins/parallax.min.js' %}"></script>
   <!-- Control Center for Material UI Kit: parallax effects, scripts for the example pages etc -->
   <!--  Google Maps Plugin    -->
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDTTfWur0PDbZWPr7Pmq8K3jiDp0_xUziI"></script>
-  <script src="{% static 'assets/js/django-material-kit/material-kit.min.js' %}" type="text/javascript"></script>
+  <script src="{% static 'assets/js/material-kit.min.js' %}" type="text/javascript"></script>
   <script type="text/javascript">
     if (document.getElementById('state1')) {
       const countUp = new CountUp('state1', document.getElementById("state1").getAttribute("countTo"));
