--- a/frontend/templates/home/django-material-kit/ui-elements-progress-bars.html
+++ b/frontend/templates/home/django-material-kit/ui-elements-progress-bars.html
@@ -35,7 +35,7 @@
   <!-- Material Icons -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Round" rel="stylesheet">
   <!-- CSS Files -->
-  <link id="pagestyle" rel="stylesheet" type="text/css" href="{% static 'assets/css/django-material-kit/material-kit.css' %}">
+  <link id="pagestyle" rel="stylesheet" type="text/css" href="{% static 'assets/css/material-kit.css' %}">
 
 </head>
 <body class="progress-bars-sections">
