--- a/frontend/templates/home/django-material-kit/ui-input-inputs.html
+++ b/frontend/templates/home/django-material-kit/ui-input-inputs.html
@@ -19,7 +19,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link rel="apple-touch-icon" sizes="76x76" href="{% static 'assets/img/medna-icon.png' %}">
-  <link rel="icon" type="image/png" href="{% static 'assets/img/django-material-kit/favicon.png' %}">
+  <link rel="icon" type="image/png" href="{% static 'assets/img/favicon.png' %}">
 
   <title>
     Maine-eDNA Metadata - Inputs | Maine EPSCoR
@@ -28,14 +28,14 @@
   <!--     Fonts and icons     -->
   <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900|Roboto+Slab:400,700" />
   <!-- Nucleo Icons -->
-  <link rel="stylesheet" type="text/css" href="{% static 'assets/css/django-material-kit/nucleo-icons.css' %}">
-  <link rel="stylesheet" type="text/css" href="{% static 'assets/css/django-material-kit/nucleo-svg.css' %}">
+  <link rel="stylesheet" type="text/css" href="{% static 'assets/css/nucleo-icons.css' %}">
+  <link rel="stylesheet" type="text/css" href="{% static 'assets/css/nucleo-svg.css' %}">
   <!-- Font Awesome Icons -->
   <script src="https://kit.fontawesome.com/42d5adcbca.js" crossorigin="anonymous"></script>
   <!-- Material Icons -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Round" rel="stylesheet">
   <!-- CSS Files -->
-  <link id="pagestyle" rel="stylesheet" type="text/css" href="{% static 'assets/css/django-material-kit/material-kit.css' %}">
+  <link id="pagestyle" rel="stylesheet" type="text/css" href="{% static 'assets/css/material-kit.css' %}">
 
 </head>
 <body class="inputs-sections">
@@ -99,8 +99,8 @@
   </div>
 </section>
 
-        <script src="{% static 'assets/js/django-material-kit/core/popper.min.js' %}" type="text/javascript"></script>
-        <script src="{% static 'assets/js/django-material-kit/core/bootstrap.min.js' %}" type="text/javascript"></script>
+        <script src="{% static 'assets/js/core/popper.min.js' %}" type="text/javascript"></script>
+        <script src="{% static 'assets/js/core/bootstrap.min.js' %}" type="text/javascript"></script>
         <script src="https://demos.creative-tim.com/material-kit/assets/js/material-kit.min.js?v=3.0.0" type="text/javascript"></script>
         '></iframe>
             </div>
@@ -170,8 +170,8 @@
   </div>
 </section>
 
-        <script src="{% static 'assets/js/django-material-kit/core/popper.min.js' %}" type="text/javascript"></script>
-        <script src="{% static 'assets/js/django-material-kit/core/bootstrap.min.js' %}" type="text/javascript"></script>
+        <script src="{% static 'assets/js/core/popper.min.js' %}" type="text/javascript"></script>
+        <script src="{% static 'assets/js/core/bootstrap.min.js' %}" type="text/javascript"></script>
         <script src="https://demos.creative-tim.com/material-kit/assets/js/material-kit.min.js?v=3.0.0" type="text/javascript"></script>
         '></iframe>
             </div>
@@ -240,8 +240,8 @@
   </div>
 </section>
 
-        <script src="{% static 'assets/js/django-material-kit/core/popper.min.js' %}" type="text/javascript"></script>
-        <script src="{% static 'assets/js/django-material-kit/core/bootstrap.min.js' %}" type="text/javascript"></script>
+        <script src="{% static 'assets/js/core/popper.min.js' %}" type="text/javascript"></script>
+        <script src="{% static 'assets/js/core/bootstrap.min.js' %}" type="text/javascript"></script>
         <script src="https://demos.creative-tim.com/material-kit/assets/js/material-kit.min.js?v=3.0.0" type="text/javascript"></script>
         '></iframe>
             </div>
@@ -311,8 +311,8 @@
   </div>
 </section>
 
-        <script src="{% static 'assets/js/django-material-kit/core/popper.min.js' %}" type="text/javascript"></script>
-        <script src="{% static 'assets/js/django-material-kit/core/bootstrap.min.js' %}" type="text/javascript"></script>
+        <script src="{% static 'assets/js/core/popper.min.js' %}" type="text/javascript"></script>
+        <script src="{% static 'assets/js/core/bootstrap.min.js' %}" type="text/javascript"></script>
         <script src="https://demos.creative-tim.com/material-kit/assets/js/material-kit.min.js?v=3.0.0" type="text/javascript"></script>
         '></iframe>
             </div>
@@ -379,8 +379,8 @@
   </div>
 </section>
 
-        <script src="{% static 'assets/js/django-material-kit/core/popper.min.js' %}" type="text/javascript"></script>
-        <script src="{% static 'assets/js/django-material-kit/core/bootstrap.min.js' %}" type="text/javascript"></script>
+        <script src="{% static 'assets/js/core/popper.min.js' %}" type="text/javascript"></script>
+        <script src="{% static 'assets/js/core/bootstrap.min.js' %}" type="text/javascript"></script>
         <script src="https://demos.creative-tim.com/material-kit/assets/js/material-kit.min.js?v=3.0.0" type="text/javascript"></script>
         '></iframe>
             </div>
@@ -444,8 +444,8 @@
   </div>
 </section>
 
-        <script src="{% static 'assets/js/django-material-kit/core/popper.min.js' %}" type="text/javascript"></script>
-        <script src="{% static 'assets/js/django-material-kit/core/bootstrap.min.js' %}" type="text/javascript"></script>
+        <script src="{% static 'assets/js/core/popper.min.js' %}" type="text/javascript"></script>
+        <script src="{% static 'assets/js/core/bootstrap.min.js' %}" type="text/javascript"></script>
         <script src="https://demos.creative-tim.com/material-kit/assets/js/material-kit.min.js?v=3.0.0" type="text/javascript"></script>
         '></iframe>
             </div>
@@ -509,8 +509,8 @@
   </div>
 </section>
 
-        <script src="{% static 'assets/js/django-material-kit/core/popper.min.js' %}" type="text/javascript"></script>
-        <script src="{% static 'assets/js/django-material-kit/core/bootstrap.min.js' %}" type="text/javascript"></script>
+        <script src="{% static 'assets/js/core/popper.min.js' %}" type="text/javascript"></script>
+        <script src="{% static 'assets/js/core/bootstrap.min.js' %}" type="text/javascript"></script>
         <script src="https://demos.creative-tim.com/material-kit/assets/js/material-kit.min.js?v=3.0.0" type="text/javascript"></script>
         '></iframe>
             </div>
