fixed relative paths in templates in frontend

--- a/frontend/templates/home/django-material-dashboard/virtual-reality.html
+++ b/frontend/templates/home/django-material-dashboard/virtual-reality.html
@@ -34,7 +34,7 @@
   <!-- Material Icons -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Round" rel="stylesheet">
   <!-- CSS Files -->
-  <link id="pagestyle" href="{% static 'assets/css/material-dashboard.css?v=3.0.0' %}" rel="stylesheet" />
+  <link id="pagestyle" href="{% static 'assets/css/material-dashboard.css' %}" rel="stylesheet" />
 
 </head>
 <body class="g-sidenav-show  bg-gray-200 virtual-reality">
@@ -204,7 +204,7 @@
   <!-- Github buttons -->
   <script async defer src="https://buttons.github.io/buttons.js"></script>
   <!-- Control Center for Material Dashboard: parallax effects, scripts for the example pages etc -->
-  <script src="{% static 'assets/js/material-dashboard.min.js?v=3.0.0' %}"></script>
+  <script src="{% static 'assets/js/material-dashboard.min.js' %}"></script>
 </body>
 
 </html>
