--- a/frontend/templates/home/django-material-dashboard/sign-up.html
+++ b/frontend/templates/home/django-material-dashboard/sign-up.html
@@ -50,7 +50,7 @@
                 <div class="card-footer text-center pt-0 px-lg-2 px-1">
                   <p class="mb-2 text-sm mx-auto">
                     Already have an account?
-                    <a href="/sign-in.html" class="text-primary text-gradient font-weight-bold">Sign in</a>
+                    <a href="/dashboard/sign-in.html" class="text-primary text-gradient font-weight-bold">Sign in</a>
                   </p>
                 </div>
               </div>
