--- a/frontend/templates/account/django-material-dashboard/register.html
+++ b/frontend/templates/account/django-material-dashboard/register.html
@@ -70,7 +70,7 @@
                 <div class="card-footer text-center pt-0 px-lg-2 px-1">
                   <p class="mb-2 text-sm mx-auto">
                     Already have an account?
-                    <a href="{% url 'login' %}" class="text-primary text-gradient font-weight-bold">Sign IN</a>
+                    <a href="{% url 'dashboard_login' %}" class="text-primary text-gradient font-weight-bold">Sign IN</a>
                   </p>
                 </div>
               </div>
