--- a/frontend/templates/home/django-material-dashboard/sign-in.html
+++ b/frontend/templates/home/django-material-dashboard/sign-in.html
@@ -56,7 +56,7 @@
                 </div>
                 <p class="mt-4 text-sm text-center">
                   Don't have an account?
-                  <a href="/sign-up.html" class="text-primary text-gradient font-weight-bold">Sign up</a>
+                  <a href="/dashboard/sign-up.html" class="text-primary text-gradient font-weight-bold">Sign up</a>
                 </p>
               </form>
             </div>
