fixed relative paths in dashboard templates for frontend

--- a/frontend/templates/includes/django-material-dashboard/sidebar-rtl.html
+++ b/frontend/templates/includes/django-material-dashboard/sidebar-rtl.html
@@ -19,7 +19,7 @@
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link " href="/tables.html">
+          <a class="nav-link " href="/dashboard/tables.html">
             <div class="text-white text-center ms-2 d-flex align-items-center justify-content-center">
               <i class="material-icons-round opacity-10">table_view</i>
             </div>
@@ -27,7 +27,7 @@
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link " href="/billing.html">
+          <a class="nav-link " href="/dashboard/billing.html">
             <div class="text-white text-center ms-2 d-flex align-items-center justify-content-center">
               <i class="material-icons-round opacity-10">receipt_long</i>
             </div>
@@ -35,7 +35,7 @@
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link " href="/virtual-reality.html">
+          <a class="nav-link " href="/dashboard/virtual-reality.html">
             <div class="text-white text-center ms-2 d-flex align-items-center justify-content-center">
               <i class="material-icons-round opacity-10">view_in_ar</i>
             </div>
@@ -43,7 +43,7 @@
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active bg-gradient-primary" href="/rtl.html">
+          <a class="nav-link active bg-gradient-primary" href="/dashboard/rtl.html">
             <div class="text-white text-center ms-2 d-flex align-items-center justify-content-center">
               <i class="material-icons-round opacity-10">format_textdirection_r_to_l</i>
             </div>
@@ -51,7 +51,7 @@
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link " href="/notifications.html">
+          <a class="nav-link " href="/dashboard/notifications.html">
             <div class="text-white text-center ms-2 d-flex align-items-center justify-content-center">
               <i class="material-icons opacity-10">notifications</i>
             </div>
@@ -59,7 +59,7 @@
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link " href="/profile.html">
+          <a class="nav-link " href="/dashboard/profile.html">
             <div class="text-white text-center ms-2 d-flex align-items-center justify-content-center">
               <i class="material-icons-round opacity-10">person</i>
             </div>
