Fixed relative paths in frontend

--- a/frontend/templates/includes/django-material-dashboard/sidebar.html
+++ b/frontend/templates/includes/django-material-dashboard/sidebar.html
@@ -13,7 +13,7 @@
       <ul class="navbar-nav">
         <li class="nav-item">
           <a class="nav-link text-white {% if 'index' in segment %} active bg-gradient-primary {% endif %}" 
-             href="/">
+             href="/dashboard/">
             <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
               <i class="material-icons opacity-10">dashboard</i>
             </div>
