--- a/frontend/templates/includes/django-material-dashboard/sidebar-rtl.html
+++ b/frontend/templates/includes/django-material-dashboard/sidebar-rtl.html
@@ -11,7 +11,7 @@
     <div class="collapse navbar-collapse px-0 w-auto  max-height-vh-100" id="sidenav-collapse-main">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link " href="/">
+          <a class="nav-link " href="/dashboard/">
             <div class="text-white text-center ms-2 d-flex align-items-center justify-content-center">
               <i class="material-icons-round opacity-10">dashboard</i>
             </div>
