updated content in frontend templates

--- a/frontend/templates/includes/django-material-kit/footer-auth.html
+++ b/frontend/templates/includes/django-material-kit/footer-auth.html
@@ -1,4 +1,4 @@
-
+{% load static %}
 <footer class="footer position-absolute bottom-2 py-2 w-100">
       <div class="container">
         <div class="row align-items-center justify-content-lg-between">
