--- a/frontend/templates/account/django-material-dashboard/login.html
+++ b/frontend/templates/account/django-material-dashboard/login.html
@@ -1,7 +1,7 @@
 {% extends "layouts/django-material-dashboard/base-fullscreen.html" %}
 {% load static %}
 
-{% block title %} Sign IN {% endblock %} 
+{% block title %} Sign in {% endblock %}
 
 <!-- Specific Page CSS goes HERE  -->
 {% block stylesheets %}{% endblock stylesheets %}
@@ -18,7 +18,7 @@
             <div class="card-header p-0 position-relative mt-n4 mx-3 z-index-2">
               <div class="bg-gradient-primary shadow-primary border-radius-lg py-3 pe-1">
                 <h4 class="text-white font-weight-bolder text-center mt-2 mb-0">
-                  Django Material Dashboard
+                  Maine-eDNA Metadata Dashboard
                 </h4>
                 <div class="row mt-3">
                   <p class="mb-0 text-white text-center">
