--- a/frontend/templates/includes/django-material-dashboard/footer-fullscreen.html
+++ b/frontend/templates/includes/django-material-dashboard/footer-fullscreen.html
@@ -4,18 +4,20 @@
           <div class="row align-items-center justify-content-lg-between">
             <div class="col-12 col-md-6 my-auto">
               <div class="copyright text-center text-sm text-white text-lg-start">
-                &copy; <a href="https://bit.ly/3fKQZaL" class="text-white font-weight-bold" target="_blank">Creative Tim</a>
-                Coded by AppSeed.
+                &copy; <a href="https://github.com/melkimble" class="text-white font-weight-bold" target="_blank">melkimble</a>
               </div>
             </div>
             <div class="col-12 col-md-6">
               <ul class="nav nav-footer justify-content-center justify-content-lg-end">
                 <li class="nav-item">
-                  <a href="https://appseed.us/admin-dashboards/django-dashboard-material" 
-                     class="nav-link text-muted" target="_blank">Product</a>
+                  <a href="https://github.com/Maine-eDNA/medna-metadata"
+                     class="nav-link text-muted" target="_blank">Sources</a>
                 </li>
                 <li class="nav-item">
-                  <a href="https://appseed.us/support" class="nav-link text-muted" target="_blank">Support</a>
+                  <a href="https://umaine.edu/" class="nav-link text-muted" target="_blank">University of Maine</a>
+                </li>
+                <li class="nav-item">
+                  <a href="https://umaine.edu/edna" class="nav-link text-muted" target="_blank">Maine-eDNA</a>
                 </li>
               </ul>
             </div>
